// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Android BpkTicket should render correctly 1`] = `
<View
  accessibilityComponentType="button"
  accessibilityLabel="Example Ticket"
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "rgb(255, 255, 255)",
        "borderRadius": 2,
        "elevation": 2,
        "shadowColor": undefined,
        "shadowOffset": Object {
          "height": NaN,
          "width": undefined,
        },
        "shadowOpacity": undefined,
        "shadowRadius": NaN,
      },
    ]
  }
  testID={undefined}
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "flexDirection": "row",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "padding": 16,
          },
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "sans-serif",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Object {},
          ]
        }
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
      </Text>
    </View>
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "flexDirection": "column",
            "marginBottom": 8,
            "marginTop": 8,
            "width": 1,
          },
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "padding": 16,
          },
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "sans-serif",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Object {},
          ]
        }
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
      </Text>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "rgb(37, 32, 51)",
          "bottom": 0,
          "flex": 1,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
      ]
    }
  />
</View>
`;

exports[`Android BpkTicket should render correctly with arbitrary props 1`] = `
<View
  accessibilityComponentType="button"
  accessibilityLabel="Example Ticket"
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "rgb(255, 255, 255)",
        "borderRadius": 2,
        "elevation": 2,
        "shadowColor": undefined,
        "shadowOffset": Object {
          "height": NaN,
          "width": undefined,
        },
        "shadowOpacity": undefined,
        "shadowRadius": NaN,
      },
    ]
  }
  testID="arbitrary value"
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "flexDirection": "row",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "padding": 16,
          },
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "sans-serif",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Object {},
          ]
        }
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
      </Text>
    </View>
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "flexDirection": "column",
            "marginBottom": 8,
            "marginTop": 8,
            "width": 1,
          },
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "padding": 16,
          },
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "sans-serif",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Object {},
          ]
        }
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
      </Text>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "rgb(37, 32, 51)",
          "bottom": 0,
          "flex": 1,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
      ]
    }
  />
</View>
`;

exports[`Android BpkTicket should render correctly with custom main style 1`] = `
<View
  accessibilityComponentType="button"
  accessibilityLabel="Example Ticket"
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "rgb(255, 255, 255)",
        "borderRadius": 2,
        "elevation": 2,
        "shadowColor": undefined,
        "shadowOffset": Object {
          "height": NaN,
          "width": undefined,
        },
        "shadowOpacity": undefined,
        "shadowRadius": NaN,
      },
    ]
  }
  testID={undefined}
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "flexDirection": "row",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "padding": 16,
          },
          Object {
            "flex": 2,
          },
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "sans-serif",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Object {},
          ]
        }
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
      </Text>
    </View>
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "flexDirection": "column",
            "marginBottom": 8,
            "marginTop": 8,
            "width": 1,
          },
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "padding": 16,
          },
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "sans-serif",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Object {},
          ]
        }
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
      </Text>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "rgb(37, 32, 51)",
          "bottom": 0,
          "flex": 1,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
      ]
    }
  />
</View>
`;

exports[`Android BpkTicket should render correctly with custom stub style 1`] = `
<View
  accessibilityComponentType="button"
  accessibilityLabel="Example Ticket"
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "rgb(255, 255, 255)",
        "borderRadius": 2,
        "elevation": 2,
        "shadowColor": undefined,
        "shadowOffset": Object {
          "height": NaN,
          "width": undefined,
        },
        "shadowOpacity": undefined,
        "shadowRadius": NaN,
      },
    ]
  }
  testID={undefined}
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "flexDirection": "row",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "padding": 16,
          },
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "sans-serif",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Object {},
          ]
        }
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
      </Text>
    </View>
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "flexDirection": "column",
            "marginBottom": 8,
            "marginTop": 8,
            "width": 1,
          },
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "padding": 16,
          },
          Object {
            "flex": 3,
          },
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "sans-serif",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Object {},
          ]
        }
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
      </Text>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "rgb(37, 32, 51)",
          "bottom": 0,
          "flex": 1,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
      ]
    }
  />
</View>
`;

exports[`Android BpkTicket should render correctly with the "focused" state 1`] = `
<View
  accessibilityComponentType="button"
  accessibilityLabel="Example Ticket"
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "rgb(255, 255, 255)",
        "borderRadius": 2,
        "elevation": 2,
        "shadowColor": undefined,
        "shadowOffset": Object {
          "height": NaN,
          "width": undefined,
        },
        "shadowOpacity": undefined,
        "shadowRadius": NaN,
      },
      Object {
        "elevation": 16,
        "shadowColor": undefined,
        "shadowOffset": Object {
          "height": NaN,
          "width": undefined,
        },
        "shadowOpacity": undefined,
        "shadowRadius": NaN,
      },
    ]
  }
  testID={undefined}
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "flexDirection": "row",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "padding": 16,
          },
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "sans-serif",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Object {},
          ]
        }
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
      </Text>
    </View>
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "flexDirection": "column",
            "marginBottom": 8,
            "marginTop": 8,
            "width": 1,
          },
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "padding": 16,
          },
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "sans-serif",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Object {},
          ]
        }
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
      </Text>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "rgb(37, 32, 51)",
          "bottom": 0,
          "flex": 1,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
      ]
    }
  />
</View>
`;

exports[`Android BpkTicket should render correctly without padding 1`] = `
<View
  accessibilityComponentType="button"
  accessibilityLabel="Example Ticket"
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "rgb(255, 255, 255)",
        "borderRadius": 2,
        "elevation": 2,
        "shadowColor": undefined,
        "shadowOffset": Object {
          "height": NaN,
          "width": undefined,
        },
        "shadowOpacity": undefined,
        "shadowRadius": NaN,
      },
    ]
  }
  testID={undefined}
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "flexDirection": "row",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flex": 1,
          },
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "sans-serif",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Object {},
          ]
        }
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
      </Text>
    </View>
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "flexDirection": "column",
            "marginBottom": 8,
            "marginTop": 8,
            "width": 1,
          },
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "flex": 1,
          },
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "sans-serif",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Object {},
          ]
        }
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
      </Text>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "rgb(37, 32, 51)",
          "bottom": 0,
          "flex": 1,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
      ]
    }
  />
</View>
`;
